testdata/step_15/valid/forward_decl.c
foo();

main() {
    return foo();
}

foo() {
    return 3;
}