testdata/step_15/invalid/redefine_function.c
foo(){
    return 3;
}

main() {
    return foo();
}

foo(){
    return 4;
}